// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App fails fetching data with a list 1`] = `
<div>
  <h1>
    My Hacker Stories with 
    0
     comments.
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="search"
    >
      <strong>
        Search:
      </strong>
    </label>
     
    <input
      id="search"
      onChange={[Function]}
      type="text"
      value="React"
    />
    <button
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </form>
  <hr />
  <p>
    Something went wrong ...
  </p>
</div>
`;

exports[`App succeeds fetching data with a list 1`] = `
<div>
  <h1>
    My Hacker Stories with 
    5
     comments.
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="search"
    >
      <strong>
        Search:
      </strong>
    </label>
     
    <input
      id="search"
      onChange={[Function]}
      type="text"
      value="React"
    />
    <button
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </form>
  <hr />
  <div>
    <span>
      <a
        href="https://reactjs.org/"
      >
        React
      </a>
    </span>
    <span>
      Jordan Walke
    </span>
    <span>
      3
    </span>
    <span>
      4
    </span>
    <span>
      <button
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div>
    <span>
      <a
        href="https://redux.js.org/"
      >
        Redux
      </a>
    </span>
    <span>
      Dan Abramov, Andrew Clark
    </span>
    <span>
      2
    </span>
    <span>
      5
    </span>
    <span>
      <button
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`Item renders snapshot 1`] = `
<div>
  <span>
    <a
      href="https://reactjs.org/"
    >
      React
    </a>
  </span>
  <span>
    Jordan Walke
  </span>
  <span>
    3
  </span>
  <span>
    4
  </span>
  <span>
    <button
      onClick={[Function]}
      type="button"
    >
      Dismiss
    </button>
  </span>
</div>
`;

exports[`List renders snapshot 1`] = `
Array [
  <div>
    <span>
      <a
        href="https://reactjs.org/"
      >
        React
      </a>
    </span>
    <span>
      Jordan Walke
    </span>
    <span>
      3
    </span>
    <span>
      4
    </span>
    <span>
      <button
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>,
  <div>
    <span>
      <a
        href="https://redux.js.org/"
      >
        Redux
      </a>
    </span>
    <span>
      Dan Abramov, Andrew Clark
    </span>
    <span>
      2
    </span>
    <span>
      5
    </span>
    <span>
      <button
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>,
]
`;

exports[`SearchForm renders snapshot 1`] = `
<form
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <label
    htmlFor="search"
  >
    <strong>
      Search:
    </strong>
  </label>
   
  <input
    id="search"
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": "Redux",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    type="text"
    value="React"
  />
  <button
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;
